--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -301,7 +301,7 @@ This is especially helpful for ensuring progressive overload. That is, doing a l
 
 \item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
 Description: The product shall allow a user to browse and search for workout routines.
-\\ Rational: To make publicly posted workout routines discoverable and for users to find routines that cater their fitness goals.
+\\ Rational: To make publicly posted workout routines discoverable and for users to find routines that cater to their fitness goals.
 \\ Fit Criterion: The user is able to browse and search for workout routines. The returned routines contain words that the user searched for.
 
 \item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
