--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -332,7 +332,7 @@ Description: The system shall allow the user to create and view a goal in the fo
 \item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
 Description: The system shall allow the user to create progress points towards a specific goal.
 \\ Rational: Being able to track progress towards set goals can help encourage more progression until the goal is reached.
-\\ Fit Criterion: The user is able to create progress points towards affiliated with a specific goal.
+\\ Fit Criterion: The user is able to create progress points towards specific goals.
 
 \item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
 Description: A progress point must be associated with a one specific goal, and must exist as a date metric pair. For example, ``09/04/22 - 96kg" under a ``Bench Press - 100kg" goal. The metric type must match the goal metric type, for example kg.
