--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -326,8 +326,8 @@ Description: The system shall allow a user to search for and view another user's
 
 \item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
 Description: The system shall allow the user to create and view a goal in the form of an exercise and a metric pair. For example, ``Bench press - 100kg".
-\\ Rational: This allows the user to set and witness progression towards their fitness goals
-\\ Fit Criterion: If the user is able to create and view goals.
+\\ Rational: This allows the user to set and witness progression towards their fitness goals.
+\\ Fit Criterion: The user is able to create and view goals.
 
 \item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:]
 Description: The system shall allow the user to create progress points towards a specific goal.
