Spelling Errors + NFR Changes

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -163,7 +163,7 @@ Date 2 & 1.1 & Notes\\
 \subsection{The Purpose of the Project}
   \subsubsection{The User Business or Background of the Project Effort}
   \noindent
-  With the increase in media consumption across the world, there has been a greater focus on several previously underrepresented or unaccessable niches, such as health and fitness. Despite the growth and presence of fitness in social media, there are still large barriers to entry that make it intimidating to get started or get accurate information that would aid individuals in their fitness journeys. A lot of the media available online is either behind a paywall, or structured in undigestible video and written formats. The lack of a free, centralized system that contains media generated and verified by fitness enthusiasts alike spurred the idea for this application. This application aims to bridge the gap that exists in the online fitness world by allowing individuals to create and track workouts of their own, search and share workouts created by others, and review and discuss what they find personally works and doesn't work for them. Creating a collaborative online fitness environment allows indiviuals to start or expand their fitness journey without looking in numerous locations or paying money for programs that may not work for them. 
+  With the increase in media consumption across the world, there has been a greater focus on several previously underrepresented or inaccessable niches, such as health and fitness. Despite the growth and presence of fitness in social media, there are still large barriers to entry that make it intimidating to get started or get accurate information that would aid individuals in their fitness journeys. A lot of the media available online is either behind a paywall, or structured in undigestible video and written formats. The lack of a free, centralized system that contains media generated and verified by fitness enthusiasts alike spurred the idea for this application. This application aims to bridge the gap that exists in the online fitness world by allowing individuals to create and track workouts of their own, search and share workouts created by others, and review and discuss what they find personally works and doesn't work for them. Creating a collaborative online fitness environment allows individuals to start or expand their fitness journey without looking in numerous locations or paying money for programs that may not work for them. 
 \subsection{Stakeholders}
 \begin{enumerate}
 	\item Fitness Enthusiasts - Anyone interested in exploring other fitness routines, creating their own routines, and tracking their own personal progression towards goals.
@@ -302,7 +302,7 @@ be covered in the Verification and Validation document.}
       \item[NFR\refstepcounter{nfrnum}\thenfrnum:] 
         User login shall support 100 users per hour providing a response time of less than 10 seconds.
       \item[NFR\refstepcounter{nfrnum}\thenfrnum:] 
-        Review page shall support 100 users providing a response time of less than 10 seconds.
+        Application pages shall support 100 users providing a response time of less than 10 seconds.
       \item[NFR\refstepcounter{nfrnum}\thenfrnum:] 
         Users shall be able to input or update a program within 10 seconds.
     \end{itemize}
