Project issues from Migration to the New project to end of section

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -904,11 +904,30 @@ be covered in the Verification and Validation document.}
 	\subsection{New Problems}
 	\subsection{Tasks}
 	\subsection{Migration to the New Product}
-	\subsection{Risks}
-	\subsection{Costs}
-	\subsection{User Documentation and Training}
-	\subsection{Waiting Room}
-	\subsection{Ideas for Solutions}
+    The product will be rolled out to the Apple App store first and then added to the Google play store after it has run without issue on the app store.
+    This project is new and so no transition period is relevant.
+  \subsection{Risks}
+    \begin{itemize}
+      \item User data breach. If users data is leaked then this would have damaging ramifications for our reputation and our userbase.
+      \item Failure of content moderation. Olympian is a social media application and as such is susceptible to being used for nefarious and hateful purposes. This is why content moderation will be vital in running this application.
+    \end{itemize}
+  \subsection{Costs}
+    \begin{itemize}
+      \item The cost of keeping a server that is always responsive to client requests. This has an estimated cost of \$25 per month.
+      \item The cost of utilizing a database that can handle many reads and writes quickly. This has an estimated cost of \$10 per month.
+      \item The cost of an Individual Developer Account needed to host all apps on the Apple App Store. This will cost USD\$99.
+    \end{itemize}
+  \subsection{User Documentation and Training}
+    N/A
+  \subsection{Waiting Room}
+    \begin{itemize}
+      \item The product must allow users to track their diet information and recommend diets based on calory intake.
+      \item The product must algorithmically produce a "Recommended" feed filled with workouts selected for users based on their habits and interests.
+      \item The product must include an optional networking feature where users can view the growth of similar users and track the steps taken to produce those improvements.
+    \end{itemize}
+  \subsection{Ideas for Solutions}
+    The product should be built using React Native along with an expressjs backend and utilizing the Google Firestore suite for app management including database and storage. Pricing was collected with these services in mind and they fullfil the needs of the product.
+
 	
 	
 	
